# rosalind-problems

./: .gitignore  dune-project
lib/: dune
stronghold/cons/: dune  main.ml
stronghold/dna/: dune  main.ml
stronghold/fib/: dune  main.ml
stronghold/gc/: dune  main.ml
stronghold/grph/: dune  main.ml
stronghold/hamm/: dune  main.ml
stronghold/iev/: dune  main.ml
stronghold/iprb/: dune  main.ml
stronghold/lexf/: dune  main.ml
stronghold/lexv/: dune  main.ml
stronghold/mrna/: dune  main.ml
stronghold/perm/: dune  main.ml
stronghold/pper/: dune  main.ml
stronghold/prot/: dune  main.ml
stronghold/prtm/: dune  main.ml
stronghold/revc/: dune  main.ml
stronghold/revp/: dune  main.ml
stronghold/rna/: dune  main.ml
stronghold/shared/: dune  shared.mli  utils.ml  utils.mli
stronghold/subs/: dune  main.ml
